# tachypy

./: MANIFEST.in  README.md  clock_timer_demo.py  example_tachypy.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  tests.yml
docs/: api.rst  audio.rst  backends.rst  conf.py  contributing.rst  examples.rst  getting_started.rst  index.rst  requirements.txt  testing.rst  text_rendering.rst  timing_validation.rst
src/tachypy/: __init__.py  audio.py  draggable.py  glsystemtext.py  gltext.py  gltext_sdf.py  psychophysics.py  quest.py  responses.py  screen.py  scrollbar.py  shapes.py  text.py  textures.py  visuals.py
src/tachypy/examples/: __init__.py  clock_timer_demo.py
tests/: fake_glfw.py  test_audio.py  test_audio_backends.py  test_audio_extended.py  test_draggable.py  test_draggable_extended.py  test_glfw_input.py  test_glsystemtext.py  test_gltext.py  test_gltext_sdf.py  test_optional_pygame.py  test_psychophysics.py  test_psychophysics_extended.py  test_public_api.py  test_responses.py  test_responses_extended.py  test_screen.py  test_scrollbar.py  test_scrollbar_extended.py  test_text.py  test_textures.py
