[metadata]
name = tachypy
version = 0.1.9
author = Ian Charest and Frederic Gosselin
author_email = charest.ian@gmail.com
description = A package for psychophysics in Python, using pygame and opengl.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CharestLab/tachypy
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
install_requires =
    pygame>=2.0.0
    PyOpenGL>=3.1.0
    numpy>=1.18.0
    screeninfo>=0.6.0
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=7.0
    pytest-cov>=5.0
    ruff>=0.6
glfw =
    glfw>=2.7
audio_sd =
    sounddevice>=0.5
audio =
    sounddevice>=0.5
text =
    Pillow>=10.0
system_text =
    freetype-py>=2.4
    uharfbuzz>=0.39

[tool:pytest]
addopts = -q
testpaths = tests

[coverage:run]
source = tachypy
branch = True
omit =
    */tachypy/quest.py
    */tachypy/screen.py
    */tachypy/text.py
    */tachypy/textures.py
    */tachypy/shapes.py
    */tachypy/gltext.py
    */tachypy/gltext_sdf.py
    */tachypy/glsystemtext.py

[coverage:report]
skip_empty = True
