[metadata]
name = tachypy
version = 0.1.17
author = Ian Charest and Frederic Gosselin
author_email = charest.ian@gmail.com
description = A package for psychophysics in Python, using GLFW and OpenGL.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CharestLab/tachypy
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
install_requires =
    glfw>=2.7
    pyserial>=3.5
    Pillow>=10.0
    PyOpenGL>=3.1.0
    numpy>=1.18.0
    screeninfo>=0.6.0
    freetype-py>=2.4
    uharfbuzz>=0.39
    tachyaudio>=0.2.0b1
python_requires = >=3.10

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=7.0
    pytest-cov>=5.0
    ruff>=0.6
glfw =
    glfw>=2.7
audio =
    tachyaudio>=0.2.0b1
text =
    Pillow>=10.0
system_text =
    freetype-py>=2.4
    uharfbuzz>=0.39

[options.entry_points]
console_scripts =
    tachypy-clock-demo = tachypy.examples.clock_timer_demo:main

[tool:pytest]
addopts = -q
testpaths = tests

[coverage:run]
source = tachypy
branch = True
omit =
    */tachypy/quest.py
    */tachypy/screen.py
    */tachypy/text.py
    */tachypy/textures.py
    */tachypy/shapes.py
    */tachypy/gltext.py
    */tachypy/gltext_sdf.py
    */tachypy/glsystemtext.py
    */tachypy/examples/*

[coverage:report]
skip_empty = True
